# ggbot

./: .gitignore  LICENSE  README.md  bot.py  pyproject.toml  requirements.txt  utils.py
extensions/: challonge.py  developer.py  exceptions.py  help.py  info.py  mod.py
